crates/ruff_python_parser/tests/snapshots/invalid_syntax@expressions__set__missing_closing_curly_brace_1.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/expressions/set/missing_closing_curly_brace_1.py
---
## AST

```
Module(
    ModModule {
        node_index: 0,
        range: 0..136,
        body: [
            Expr(
                StmtExpr {
                    node_index: 0,
                    range: 128..136,
                    value: Set(
                        ExprSet {
                            node_index: 0,
                            range: 128..136,
                            elts: [
                                BinOp(
                                    ExprBinOp {
                                        node_index: 0,
                                        range: 131..136,
                                        left: Name(
                                            ExprName {
                                                node_index: 0,
                                                range: 131..132,
                                                id: Name("x"),
                                                ctx: Load,
                                            },
                                        ),
                                        op: Add,
                                        right: Name(
                                            ExprName {
                                                node_index: 0,
                                                range: 135..136,
                                                id: Name("y"),
                                                ctx: Load,
                                            },
                                        ),
                                    },
                                ),
                            ],
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
4 | {
5 |
6 | x + y
  |      ^ Syntax Error: unexpected EOF while parsing
  |
